# placementTraining

./: .gitignore.txt  Solution.java  help.cpp  mensur_3.html  programExecutionLeetcode.cpp  targetTwoSum.cpp
0001yukta/: Solution.java  test.html  test.jsp  yuk_1.java
Amazon/: validParen.java
CRT/: test1.cpp  test2.cpp
ClionProj/: CMakeLists.txt  evaluate.cpp  inFixToPost.cpp  main.cpp  stackLinked.cpp
MadeEasyBook/: CMakeLists.txt  EqDiv.cpp  blb.cpp  helpCpp.txt  interval.cpp  main.cpp  main2.cpp
MadeEasyBook/BackTracking/: 005connectedCells.cpp  CheckpairWiseOrder.cpp  GenSstring.cpp  Nqueen.cpp  capitalLetter.cpp  phoneNum.cpp  possAttack1.cpp  prob10queue.cpp  ratMaze.cpp  solutionsHELP.cpp  timeBits.cpp
MadeEasyBook/LVBBR/: FINAL450.xlsx
MadeEasyBook/LVBBR/00001misc/: bottomV.cpp  mobileNum.cpp  pali.cpp
MadeEasyBook/LVBBR/Ch-12GRAPH/: numofIsland.cpp
MadeEasyBook/LVBBR/Ch-12GRAPH/cycle/: CircleDetectionBoth.cpp  UndirectedCycle.cpp  cycleDetection.cpp
MadeEasyBook/LVBBR/Ch-12GRAPH/lvBbbr450/: ratInMaze.cpp
MadeEasyBook/LVBBR/Ch-12GRAPH/shortestPath/: BellmanFord.cpp  BellmanFord_STRIVER.cpp  Dijikstra.cpp  Prims.cpp  djikstraPEP.cpp
MadeEasyBook/LVBBR/Ch-19String/: 002_Trie.cpp  PrintAllSubset.cpp  Solution.java  WordWrap.cpp  input.txt  nextGreater.cpp  outputf.txt
MadeEasyBook/LVBBR/Ch-1Arrays/: 24Comm3Sortdarr.cpp  25neg_pos.cpp  Kadane_algo.cpp  RainWater.cpp  maxContainer.cpp  maxDiff_STOCK.cpp  medianof2sorted.py  minJumps.cpp  pairsKsumwithremoval.cpp  quickSelect_KthMinO_n.cpp  quickSelect_kthMin.cpp  tempCodeRunnerFile.cpp  y.txt
MadeEasyBook/LVBBR/Ch-1Arrays/Voting/: error.txt  majority_ele.cpp
MadeEasyBook/LVBBR/Ch-3 Stack/: HistoGramArea.cpp  outputf.txt  slidingWindow.cpp
MadeEasyBook/LVBBR/Ch-4SortingSearching/Sorting/Book/: bitonic2.cpp  nutsBolt.cpp
MadeEasyBook/LVBBR/Ch-4SortingSearching/Sorting/Sheet/: bishu.cpp  minSwap.java  optimalDistance.cpp  tempCodeRunnerFile.cpp
MadeEasyBook/LVBBR/Ch-5Greedy/book/: Job.cpp  KrushKal.cpp  MobileTower.cpp  Platform.cpp  coinDp.cpp  krushKal.py
MadeEasyBook/LVBBR/Ch-5Greedy/part1/: HuffmanFullProg.cpp  huffMan.cpp  minPipeConnection.cpp
MadeEasyBook/LVBBR/Ch-5Greedy/part2/: RearrangeChar.cpp  minCostRope.cpp  minNumofSumdig.cpp  tempCodeRunnerFile.cpp
MadeEasyBook/LVBBR/ch-13Dynamic/LCS/: lcsMem.cpp  lcsTab.cpp  longestCommonString_LCSTR.cpp  lps_leetcode.cpp  minInsertDele.cpp  palindromLPS.cpp
MadeEasyBook/LVBBR/ch-13Dynamic/Matrix/: BooleanExpTABU.java  BooleeanExp.cpp  MatrixChainMulti.cpp  Palindrom.cpp  PalindromePart.cpp  ScrambledStringTABULATION.cpp  scrambledStr.cpp
MadeEasyBook/LVBBR/ch-13Dynamic/Rec/: coinChange.cpp  lcsRec.cpp
MadeEasyBook/LVBBR/ch-13Dynamic/bbr_dp_part1/: 414catalan.cpp  418FriendsPair.cpp  419GoldMine.cpp  420AssemlyLine.cpp  421PaintFence.cpp  425and428LIncSubSeq_MAXSUMLIS.cpp  input.txt  outputf.txt
MadeEasyBook/LVBBR/ch-13Dynamic/prep/: MatrixChainRec.cpp  diffSubsetSum.cpp  subSetSum.cpp  targetSum.cpp  targetSum.py  tempCodeRunnerFile.cpp
MadeEasyBook/LVBBR/ch-13Dynamic/unboundedKnapSack.cpp/: coinDenom.cpp  coinWays.cpp  kickSStart.cpp  rodCutRec.cpp  tempCodeRunnerFile.cpp  unboundedKnpSack.cpp
MadeEasyBook/Trees/: BinarySearchTree.cpp  BinarySearchTree.h  BinaryTree.cpp  puzzlesQ1_10.cpp
MadeEasyBook/chapter18Computational/: circleCenter.cpp  covexHull.cpp  dotAndCrossProd.cpp  fearofHe.cpp  lineDis.cpp  pointIntersection.cpp
MadeEasyBook/chapter18GameThoery/: GrundNum2.cpp  GrundyNum1.cpp  NimSum.cpp  minimax.cpp  restrctedNimSumSpragueGrndy.cpp
MadeEasyBook/chapter19String/: rabinKarp.cpp  zIndexStringMatch.cpp
MadeEasyBook/dynamicProg/: subSumRec.cpp
MadeEasyBook/graph/: adjListOOps.cpp  adjListVec.cpp  adjacencyMatrx.cpp  chessWorld.cpp  graphOops.cpp  nearestCell.cpp  topologicalSort.cpp
MadeEasyBook/graph/shortestPath/: Dijikstra.cpp
MadeEasyBook/heap/: Heap.cpp  Heap.h  MinHeap.h  MinHeapBottomUp.cpp  MinHeapTopDown.cpp
MadeEasyBook/leetcode/: delayTime.cpp  path.cpp  seg_evenOdd.cpp
MadeEasyBook/linkedlist/: ReverseKnodes.cpp  linkedListSS.cpp  reversek_nodes.cpp
MadeEasyBook/queue/: ArrQueue.cpp  Queue.h
MadeEasyBook/tcs/: webP.cpp
PrepBytes125/: link.txt
dynmic/: matrixChainMultiTabulation.cpp
infyTQ/: coin.py  (+5 more)
(+314 files in other folders)
