cmake_minimum_required(VERSION 3.15)
project(MadeEasyBook)

set(CMAKE_CXX_STANDARD 14)

add_executable(ratMaze BackTracking/ratMaze.cpp)
add_executable(Nqueen BackTracking/Nqueen.cpp)
add_executable(timeBits BackTracking/timeBits.cpp)

add_executable(solutionsHELP BackTracking/solutionsHELP.cpp)
add_executable(capitalLetter BackTracking/capitalLetter.cpp)
add_executable(phoneNum BackTracking/phoneNum.cpp)
add_executable(possAttack1 BackTracking/possAttack1.cpp)
add_executable(adjacencyMatrx graph/adjacencyMatrx.cpp chapter18GameThoery/NimSum.cpp chapter18GameThoery/GrundyNum1.cpp chapter18GameThoery/GrundNum2.cpp chapter18GameThoery/restrctedNimSumSpragueGrndy.cpp chapter18GameThoery/circle.c chapter18GameThoery/minimax.cpp chapter19String/rabinKarp.cpp graph/topologicalSort.cpp)
add_executable(graphOops graph/graphOops.cpp)
add_executable(adjListOOps graph/adjListOOps.cpp)
add_executable(adjListVec graph/adjListVec.cpp)
add_executable(cycleDetection LVBBR/Ch-12GRAPH/cycle/cycleDetection.cpp)
add_executable(nearestCell graph/nearestCell.cpp)
add_executable(chessWorld graph/chessWorld.cpp)
add_executable(subSumRec dynamicProg/subSumRec.cpp)
add_executable(dotAndCrossProd chapter18Computational/dotAndCrossProd.cpp chapter18Computational/pointIntersection.cpp chapter18Computational/circleCenter.cpp chapter18Computational/covexHull.cpp chapter18Computational/fearofHe.cpp)
add_executable(lineDis chapter18Computational/lineDis.cpp)
add_executable(pointIntersection chapter18Computational/pointIntersection.cpp)
add_executable(circleCenter chapter18Computational/circleCenter.cpp)
add_executable(covexHull chapter18Computational/covexHull.cpp)
add_executable(fearofHe chapter18Computational/fearofHe.cpp)
add_executable(NimSum chapter18GameThoery/NimSum.cpp)
add_executable(GrundyNum1 chapter18GameThoery/GrundyNum1.cpp)
add_executable(GrundNum2 chapter18GameThoery/GrundNum2.cpp)
add_executable(restrctedNimSumSpragueGrndy chapter18GameThoery/restrctedNimSumSpragueGrndy.cpp)
add_executable(circle chapter18GameThoery/circle.c)
add_executable(minimax chapter18GameThoery/minimax.cpp)
add_executable(rabinKarp chapter19String/rabinKarp.cpp)
add_executable(zIndexStringMatch chapter19String/zIndexStringMatch.cpp)
add_executable(topologicalSort graph/topologicalSort.cpp)
add_executable(BellmanFord graph/shortestPath/BellmanFord.cpp)
add_executable(Dijikstra graph/shortestPath/Dijikstra.cpp)
add_executable(UndirectedCycle LVBBR/Ch-12GRAPH/cycle/UndirectedCycle.cpp)
add_executable(ratInMaze graph/lvBbbr450/ratInMaze.cpp)
add_executable(quickSelect_kthMin LVBBR/Ch-1Arrays/quickSelect_kthMin.cpp)
add_executable(quickSelect_KthMinO_n "LVBBR/Ch-1Arrays/quickSelect_KthMinO_n.cpp")

add_executable(35_MedOf2SortedArr_DifSize LVBBR/Ch-1Arrays/35_MedOf2SortedArr_DifSize.cpp)
add_executable(webP tcs/webP.cpp)
add_executable(EqDiv EqDiv.cpp)
add_executable(seg_evenOdd leetcode/seg_evenOdd.cpp)
add_executable(pairsKsumwithremoval LVBBR/Ch-1Arrays/pairsKsumwithremoval.cpp)
add_executable(ReverseKnodes linkedlist/ReverseKnodes.cpp)
add_executable(reverseKnodes LVBBR/ch-2LinkedList/reverseKnodes.cpp)
add_executable(reversek_nodes linkedlist/reversek_nodes.cpp)
add_executable(bottomV LVBBR/bottomV.cpp)
add_executable(mobileNum LVBBR/mobileNum.cpp)
add_executable(HistoGramArea "LVBBR/Ch-3 Stack/HistoGramArea.cpp")
add_executable(longestCommonString_LCSTR LVBBR/ch-13Dynamic/LCS/longestCommonString_LCSTR.cpp)

add_executable(lcsMem LVBBR/ch-13Dynamic/LCS/lcsMem.cpp)
add_executable(palindromLPS LVBBR/ch-13Dynamic/LCS/palindromLPS.cpp)
add_executable(lps_leetcode LVBBR/ch-13Dynamic/LCS/lps_leetcode.cpp)
add_executable(delayTime leetcode/delayTime.cpp)
add_executable(ch-14Trees LVBBR/ch-14Trees.cpp)
add_executable(path leetcode/path.cpp)